fix: margin on small figures

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -326,3 +326,14 @@ time {
     border-bottom: 1px solid #000;
   }
 }
+
+.long-anchor {
+  word-break: break-all;
+}
+
+@media only screen and (max-width: 600px) {
+  figure {
+    margin-inline-start: 0;
+    margin-inline-end: 0;
+  }
+}
